<resources>
    <string name="app_name">Calmme</string>
    <string name="main">메인</string>
    <string name="challenge">챌린지</string>
    <string name="analysis">분석</string>
    <string name="setting">설정</string>

    <string name="camera_title">카메라 확인</string>
    <string name="camera_vertical">카메라가\n<b>수직</b>이에요</string>
    <string name="camera_horizontal">카메라가\n<b>수평</b>이에요</string>

    <string name="output_hint">플래시를 가리고 장치 카메라에 손가락을 대고 10 초 후 공유 버튼으로 결과를 내보낼 수 있습니다. 이 유틸리티는 카메라를 통해 보이는 빨간색의 양을 측정하고 변동을 감지하려고 시도합니다. 어두운 방에서 그리고 카메라에 가해지는 압력이 일정 할 때 더 잘 작동합니다. 장치에 여러 대의 카메라가있는 경우 대부분의 손가락이 전체 시야를 가리도록하십시오.</string>
    <string name="output_header_template">Heart rate raw data as of %s</string>
    <string name="output_body_template">Final result:\n%s\nNormalized results and detected peaks:\n%s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="share_button_description">Share</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>
    <string name="kakao_app_key">b0ce1e85d647723f96ffec2be4ef7367</string>


    <string name="challenge_title">챌린지 🎖</string>
    <string name="challenge_ongoing">진행 중인 챌린지</string>
    <string name="challenge_introduce">까미가 제공하는 간단한 챌린지를 통해 셀프케어 습관을 길러보세요</string>
    <string name="challenge_find">챌린지 탐색 🎨💎</string>
    <string name="recommend">추천</string>
    <string name="new_challenge">신규</string>
    <string name="three_days">D-3</string>
    <string name="week">D-7</string>
    <string name="special">Special</string>

    <string name="my_challenge_title">내가 담은 챌린지</string>

    <string name="my_page_title">마이 페이지</string>



</resources>