<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main"
        android:checked="true"
        android:icon="@drawable/ic_main"
        android:iconTint="@color/yellow"
        android:title="@string/main" />

    <item
        android:id="@+id/challenge"
        android:icon="@drawable/ic_challenge"
        android:iconTint="@color/yellow"
        android:title="@string/challenge" />
    <item
        android:id="@+id/analysis"
        android:icon="@drawable/ic_analysis"
        android:iconTint="@color/yellow"
        android:title="@string/analysis" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:iconTint="@color/yellow"
        android:title="@string/setting" />

</menu>
