<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChallengeFragment">

    <TextView
        android:id="@+id/challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginLeft="9dp"
        android:paddingTop="14dp"
        android:paddingBottom="6dp"
        android:text="@string/challenge_title"
        android:textColor="@color/deepGrey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:paddingTop="14dp"
        android:paddingBottom="6dp"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/my_page_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/my_page_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:paddingTop="14dp"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/challenge_ongoing"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:paddingLeft="9dp"
        android:paddingTop="6dp"
        android:text="@string/challenge_ongoing"
        android:textColor="@color/deepGrey"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/challenge_title" />

    <TextView
        android:id="@+id/challenge_introduce"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:paddingLeft="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="4dp"
        android:text="@string/challenge_introduce"
        android:textColor="@color/darkGrey"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/challenge_ongoing" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ongoing_challenge_list"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintTop_toBottomOf="@id/challenge_introduce" />

    <TextView
        android:id="@+id/challenge_find"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:paddingLeft="9dp"
        android:paddingTop="5dp"
        android:text="@string/challenge_find"
        android:textColor="@color/deepGrey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ongoing_challenge_list" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recommend_tab"
        android:layout_width="@dimen/challenge_tab_width"
        android:layout_height="@dimen/challenge_tab_height"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/middleGrey"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_find"
        app:layout_constraintEnd_toStartOf="@id/new_tab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/recommend"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/new_tab"
        android:layout_width="@dimen/challenge_tab_width"
        android:layout_height="@dimen/challenge_tab_height"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/lightBlack"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/recommend_tab"
        app:layout_constraintTop_toBottomOf="@id/challenge_find"
        app:layout_constraintEnd_toStartOf="@id/three_days_tab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/new_challenge"
            android:textColor="@color/modernGrey"
            android:textSize="10dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/three_days_tab"
        android:layout_width="@dimen/challenge_tab_width"
        android:layout_height="@dimen/challenge_tab_height"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/lightBlack"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/new_tab"
        app:layout_constraintTop_toBottomOf="@id/challenge_find"
        app:layout_constraintEnd_toStartOf="@id/week_tab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/three_days"
            android:textColor="@color/modernGrey"
            android:textSize="10dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/week_tab"
        android:layout_width="@dimen/challenge_tab_width"
        android:layout_height="@dimen/challenge_tab_height"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/lightBlack"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/three_days_tab"
        app:layout_constraintTop_toBottomOf="@id/challenge_find"
        app:layout_constraintEnd_toStartOf="@id/special_tab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/week"
            android:textColor="@color/modernGrey"
            android:textSize="10dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/special_tab"
        android:layout_width="@dimen/challenge_tab_width"
        android:layout_height="@dimen/challenge_tab_height"
        android:layout_marginTop="9dp"
        android:layout_marginRight="9dp"
        android:backgroundTint="@color/lightBlack"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/week_tab"
        app:layout_constraintTop_toBottomOf="@id/challenge_find"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/special"
            android:textColor="@color/modernGrey"
            android:textSize="10dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="5dp"
        android:background="@color/modernGrey"
        app:layout_constraintTop_toBottomOf="@id/three_days_tab"/>

</androidx.constraintlayout.widget.ConstraintLayout>